--- a/globalmap.html
+++ b/globalmap.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Map with D3.js</title>
+    <title>Global map</title>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <style>
         .province {
